addingg debugger path  for Linux

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "msp.h": "c",
     "driverlib.h": "c",
     "systick.h": "c"
-  }
+  },
+  "cortex-debug.gdbPath": "gdb-multiarch" // comment this line out if on MacOS, leave in on Linux
 }
